# marlin-kernels

./: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
csrc/: ops.h  torch_bindings.cpp
csrc/core/: scalar_type.hpp
csrc/cutlass_extensions/: vllm_cutlass_library_extension.py
csrc/cutlass_extensions/epilogue/: scaled_mm_epilogues_c2x.hpp  scaled_mm_epilogues_c3x.hpp
csrc/quantization/: vectorization.cuh
csrc/quantization/compressed_tensors/: int8_quant_kernels.cu
csrc/quantization/cutlass_w8a8/: scaled_mm_c2x.cu  scaled_mm_c2x.cuh  scaled_mm_c2x_sm75_dispatch.cuh  scaled_mm_c2x_sm80_dispatch.cuh  scaled_mm_c2x_sm89_fp8_dispatch.cuh  scaled_mm_c2x_sm89_int8_dispatch.cuh  scaled_mm_c3x.cu  scaled_mm_c3x.cuh  scaled_mm_c3x_sm90_fp8_dispatch.cuh  scaled_mm_c3x_sm90_int8_dispatch.cuh
csrc/quantization/fp8/: common.cu  common.cuh
csrc/quantization/gptq_marlin/: gptq_marlin.cu
csrc/quantization/machete/: machete_mm_kernel.cuh  machete_mm_launcher.cuh  machete_prepack_launcher.cuh  machete_pytorch.cu
csrc/quantization/marlin/sparse/: marlin_24_cuda_kernel.cu
marlin_kernels/: __init__.py  __init__.pyi  _core_ext.py  ext.cpp
marlin_kernels/_ops/: ext.cpp
marlin_kernels/_ops/fp8/amd/: quant_utils.cuh
marlin_kernels/_ops/fp8/nvidia/: quant_utils.cuh
marlin_kernels/_ops/marlin/sparse/: marlin_24_cuda_kernel.cu
